# 1-Lipschitz-SDF

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  environment.yaml  environments.yaml  gen_2d_dataset.py  gen_3d_dataset.py  pyproject.toml  train.py
config/: armadillo.yaml  bunny.yaml  butterfly.yaml  koch.yaml  sierpinski.yaml
data/: dataset.py  gen_2d_dataset.py  shapes.py
models/: __init__.py  ffn.py  pe.py  siren.py  sll.py  wire.py
utils/: logger.py  loss.py  metric.py  plot.py
